--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,12 @@
 {
     "builds": [
         {
-            "src": "dist/spa/**",
-            "use": "@vercel/static"
-        },
-        {
-            "src": "dist/server/node-build.mjs",
-            "use": "@vercel/node"
+            "src": "package.json",
+            "use": "@vercel/static-build",
+            "config": { "distDir": "dist/spa" }
         }
     ],
     "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "dist/server/node-build.mjs"
-        },
         {
             "src": "/(.*)",
             "dest": "dist/spa/index.html"
