--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build",
     "build:server": "vite build --config vite.config.server.ts",
+    "build:vercel": "npm run build:client",
     "start": "node dist/server/node-build.mjs",
     "test": "vitest --run",
     "format.fix": "prettier --write .",
@@ -25,6 +26,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
+    "@vercel/node": "^5.3.24",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "react-markdown": "^10.1.0",
