--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,19 @@
 {
-    "builds": [
-        {
-            "src": "package.json",
-            "use": "@vercel/static-build",
-            "config": { "distDir": "dist/spa" }
+    "buildCommand": "npm run build:vercel",
+    "outputDirectory": "dist/spa",
+    "functions": {
+        "api/index.ts": {
+            "runtime": "nodejs18.x"
         }
-    ],
+    },
     "routes": [
         {
+            "src": "/api/(.*)",
+            "dest": "/api/index.ts"
+        },
+        {
             "src": "/(.*)",
-            "dest": "dist/spa/index.html"
+            "dest": "/index.html"
         }
     ]
 }
