--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,6 @@
 {
-    "builds": [
-        {
-            "src": "package.json",
-            "use": "@vercel/static-build",
-            "config": { "distDir": "dist/spa" }
-        }
-    ],
+    "buildCommand": "npm run build:client",
+    "outputDirectory": "dist/spa",
     "routes": [
         {
             "src": "/api/(.*)",
