--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
+    "@vercel/node": "^5.3.24",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "react-markdown": "^10.1.0",
