--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,25 @@
 {
     "buildCommand": "npm run build:client",
     "outputDirectory": "dist/spa",
-    "routes": [
+    "functions": {
+        "api/ping.ts": {
+            "runtime": "@vercel/node"
+        },
+        "api/name-generator.ts": {
+            "runtime": "@vercel/node"
+        },
+        "api/advanced-name-generator.ts": {
+            "runtime": "@vercel/node"
+        }
+    },
+    "rewrites": [
         {
-            "src": "/api/(.*)",
-            "dest": "/api/$1"
+            "source": "/api/(.*)",
+            "destination": "/api/$1"
         },
         {
-            "src": "/assets/(.*)",
-            "dest": "/assets/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/index.html"
+            "source": "/((?!api/).*)",
+            "destination": "/index.html"
         }
     ]
 }
