--- a/vercel.json
+++ b/vercel.json
@@ -21,5 +21,10 @@
             "source": "/((?!api/).*)",
             "destination": "/index.html"
         }
-    ]
+    ],
+    "build": {
+        "env": {
+            "NODE_VERSION": "18"
+        }
+    }
 }
