--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,13 @@
     "outputDirectory": "dist/spa",
     "functions": {
         "api/ping.ts": {
-            "runtime": "@vercel/node@3.0.0"
+            "runtime": "nodejs18.x"
         },
         "api/name-generator.ts": {
-            "runtime": "@vercel/node@3.0.0"
+            "runtime": "nodejs18.x"
         },
         "api/advanced-name-generator.ts": {
-            "runtime": "@vercel/node@3.0.0"
+            "runtime": "nodejs18.x"
         }
     },
     "rewrites": [
